--- a/test.ipynb
+++ b/test.ipynb
@@ -12,10 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "f4a15223",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cyrilbenedictlugod/Documents/Misc/random_code_stuff/local-rag/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -29,33 +38,13 @@
     "import torch\n",
     "import tiktoken\n",
     "import hashlib\n",
+    "from ollama import chat\n",
     "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "3890e95e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.26.4'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "b7e79440",
    "metadata": {},
    "outputs": [],
@@ -63,7 +52,26 @@
     "load_dotenv()\n",
     "\n",
     "docs_path = os.getenv('DOCS_PATH')\n",
-    "index_db = os.getenv('DB_NAME')"
+    "index_db = os.getenv('DB_NAME')\n",
+    "model_name = os.getenv('MODEL_NAME')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0a41c880",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "docs doc_index gemma3:1b\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(docs_path, index_db, model_name)"
    ]
   },
   {
@@ -76,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "id": "ba97564d",
    "metadata": {},
    "outputs": [],
@@ -87,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "id": "e0995071",
    "metadata": {},
    "outputs": [],
@@ -112,11 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def generate_index_entries(file_path):\n",
     "\n",
     "    tokenizer = TokenTextSplitter(chunk_size=200, chunk_overlap=20)\n",
@@ -134,12 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "id": "b313c8b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def push_to_index(file_path, index_db):\n",
     "\n",
     "    client = chromadb.Client()\n",
@@ -159,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "id": "99b960bd",
    "metadata": {},
    "outputs": [
@@ -167,56 +173,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Batches: 100%|██████████| 1/1 [00:01<00:00,  1.37s/it]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Collection(name=doc_index)"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "push_to_index('docs/doc3.pdf', index_db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "c16bcc8f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top matches:\n",
-      "\n",
-      " are critical in communication with other dogs.\n",
-      "Every dog’s nose print is unique, similar to human fingerprints. In fact, some kennel clubs and \n",
-      "organizations have experimented with nose-printing as a form of identification. The wet surface \n",
-      "of a dog’s nose also plays an important role in scent detection. The moisture helps capture scent \n",
-      "particles from the air, enhancing the dog’s ability to detect and analyze odors. When a dog licks \n",
-      "its nose, it’s essentially \"resetting\" this system, making it easier to pick up the next scent.\n",
-      "\n"
+      "Batches: 100%|██████████| 1/1 [00:00<00:00,  1.00it/s]\n",
+      "Batches: 100%|██████████| 1/1 [00:00<00:00,  4.01it/s]\n",
+      "Batches: 100%|██████████| 1/1 [00:00<00:00,  1.76it/s]\n"
      ]
     }
    ],
    "source": [
-    "query = model.encode([\"how do dogs communicate with other dogs?\"]).tolist()\n",
-    "results = collection.query(query_embeddings=query, n_results=2)\n",
-    "print('Top matches:\\n')\n",
-    "print(results[\"documents\"][0][0])"
+    "for file_ in load_fpaths(docs_path):\n",
+    "    push_to_index(file_, index_db)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "id": "1707530a",
    "metadata": {},
    "outputs": [
@@ -226,14 +196,15 @@
      "text": [
       "[Collection(name=doc_index)]\n",
       "Number of items: 10\n",
-      "IDs: ['159f62dcac4000f0db94e4cfaa7abdda', 'c9d0461272109d46f02e360cbac06fd1', '30624931fb9ff1a193bda505652f1bf2', 'f7cb9c9588495a45788a63f9ff491dd1', '5937f02a29431fb4f24be9126f8654ed']\n",
-      "Documents: ['The Remarkable Sense of Smell in Dogs\\nDogs are often called \"noses with legs,\" and for good reason. Their olfactory system is one of the \\nmost advanced in the animal kingdom. While humans have about 5 million scent receptors, dogs \\ncan have anywhere from 125 million to 300 million depending on the breed. This difference \\ngives them an extraordinary ability to detect faint odors, sometimes at concentrations as low as \\nparts per trillion. It’s not just the number of receptors, though—the part of a dog’s brain devoted \\nto analyzing smells is 40 times larger than that of a human, relative to brain size.\\nCertain breeds, like the Bloodhound, German Shepherd, and Belgian Malinois, are trained for \\nscent detection work in law enforcement and rescue operations. Bloodhounds, in particular, can \\nfollow a trail that is days old and over great distances, with courts even accepting', ', can \\nfollow a trail that is days old and over great distances, with courts even accepting their tracking \\nresults as evidence. Detection dogs are also used in airports to identify drugs, explosives, and \\neven agricultural products. Recently, research has shown that dogs can be trained to detect \\ncertain illnesses, including cancers, diabetes-related blood sugar changes, and even COVID-19.\\nAnother fascinating aspect of a dog’s nose is its structure. Unlike humans, dogs have a split \\nairflow system in their nostrils. One part is dedicated to breathing, while the other directs air into \\na specialized olfactory chamber where scent molecules are trapped and analyzed. Dogs also have \\na Jacobsen’s organ (or vomeronasal organ), which allows them to detect pheromones—chemical \\nsignals that are critical in communication with other dogs.\\nEvery dog’s nose print is unique, similar']\n",
-      "Metadata: [{'preview': 'The Remarkable Sense of Smell in Dogs\\nDogs are often called \"noses with legs,\" and for good reason. ', 'source': 'docs/doc1.pdf', 'chunk': 1}, {'preview': ', can \\nfollow a trail that is days old and over great distances, with courts even accepting their tr', 'chunk': 2, 'source': 'docs/doc1.pdf'}]\n"
+      "IDs: ['cb24c98c67335c77a4462ca592af1370', '5e5aa3c9be20cd9d061f1a3b6b520085', '7f967126d546912dbcc484c33194ead0', 'dc792cf25e06482987a7cc6947895c3b', 'f7cb9c9588495a45788a63f9ff491dd1']\n",
+      "Documents: ['The Essentials of Dog Care and Companionship\\nOwning a dog is a long-term commitment that goes far beyond food and shelter. Proper care \\ninvolves a combination of physical health management, mental stimulation, and emotional \\nsupport. Dogs require regular veterinary visits for vaccinations, parasite prevention, and overall \\nhealth check-ups. Preventive care helps detect issues early and can greatly extend a dog’s \\nlifespan. Additionally, dental health is often overlooked but is vital; untreated dental disease can \\nlead to infections and even organ damage.\\nExercise is one of the most important components of dog care. The amount and type of exercise \\nrequired varies by breed, age, and health. High-energy breeds like Border Collies, Huskies, and \\nBelgian Malinois need several hours of physical activity daily, while lower-energy breeds like \\nBulldogs or Shih Tzus may be content with short walks.', 'energy breeds like \\nBulldogs or Shih Tzus may be content with short walks. Beyond exercise, mental stimulation is \\nequally critical. Dogs are intelligent animals that can become bored, anxious, or destructive if not \\nproperly engaged. Puzzle toys, training exercises, and interactive games like hide-and-seek can \\nhelp keep their minds active.\\nGrooming also plays a vital role in overall care. Long-haired breeds like Afghan Hounds or Shih \\nTzus require regular brushing to prevent matting, while double-coated breeds shed seasonally \\nand need consistent grooming to manage loose fur. Bathing should be done as needed, but not \\ntoo frequently, as it can strip the skin of natural oils. Nail trimming, ear cleaning, and flea/tick \\nprevention are all essential aspects of maintaining a dog’s well-being.\\nPerhaps the most important element of dog care']\n",
+      "Metadata: [{'source': 'docs/doc3.pdf', 'preview': 'The Essentials of Dog Care and Companionship\\nOwning a dog is a long-term commitment that goes far be', 'chunk': 1}, {'source': 'docs/doc3.pdf', 'preview': 'energy breeds like \\nBulldogs or Shih Tzus may be content with short walks. Beyond exercise, mental s', 'chunk': 2}]\n"
      ]
     }
    ],
    "source": [
     "client = chromadb.Client()\n",
+    "collection = client.get_or_create_collection(index_db)\n",
     "print(client.list_collections())\n",
     "print(\"Number of items:\", collection.count())\n",
     "results = collection.get()\n",
@@ -241,6 +212,110 @@
     "print(\"Documents:\", results[\"documents\"][:2])   # show first 2 docs\n",
     "print(\"Metadata:\", results[\"metadatas\"][:2])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b2ce5610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SentenceTransformer(\"all-MiniLM-L6-v2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c636a00d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Leaving a dog alone for extended periods can lead to separation anxiety and stress-related behaviors, ultimately impacting their well-being."
+     ]
+    }
+   ],
+   "source": [
+    "query = 'What can happen if a dog is left alone too long?'\n",
+    "\n",
+    "embed_query = model.encode(query).tolist()\n",
+    "results = collection.query(query_embeddings=embed_query, n_results=2)\n",
+    "\n",
+    "retrieved_context = ''.join(results['documents'][0])\n",
+    "\n",
+    "stream = chat(\n",
+    "    model=model_name,\n",
+    "    messages=[\n",
+    "      {'role': 'system',\n",
+    "        'content': 'You are a helpful assistant. Use only the provided context to answer the question. If you are not sure about the answer, reply with \"From the provided context, I do not know the answer to your question.\"'},\n",
+    "      \n",
+    "      {'role': 'user',\n",
+    "        'content': f'Context:\\n{retrieved_context}\\nQuestion:\\n{query}'}\n",
+    "      ],\n",
+    "    stream=True,\n",
+    ")\n",
+    "\n",
+    "for chunk in stream:\n",
+    "  print(chunk['message']['content'], end='', flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "d13af122",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If a dog is left alone for extended periods, it can lead to separation anxiety and stress-related behaviors."
+     ]
+    }
+   ],
+   "source": [
+    "query = 'What can happen if a dog is left alone too long?'\n",
+    "\n",
+    "embed_query = model.encode(query, convert_to_tensor=True, normalize_embeddings=True)\n",
+    "embed_query = embed_query.tolist()  # convert only once for Chroma\n",
+    "\n",
+    "# 🔹 Retrieve top 2 chunks\n",
+    "results = collection.query(query_embeddings=embed_query, n_results=2)\n",
+    "retrieved_context = \"\\n\\n\".join(results['documents'][0])  # readable, no giant string\n",
+    "\n",
+    "# 🔹 Send to Ollama with context\n",
+    "stream = chat(\n",
+    "    model=model_name,\n",
+    "    messages=[\n",
+    "        {\n",
+    "            \"role\": \"system\",\n",
+    "            \"content\": (\n",
+    "                \"You are a helpful assistant. Use only the provided context to answer. \"\n",
+    "                \"If unsure, reply: 'From the provided context, I do not know.'\"\n",
+    "            )\n",
+    "        },\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": f\"Context:\\n{retrieved_context}\\n\\nQuestion:\\n{query}\"\n",
+    "        }\n",
+    "    ],\n",
+    "    stream=True,\n",
+    ")\n",
+    "\n",
+    "# 🔹 Stream the response\n",
+    "for chunk in stream:\n",
+    "    print(chunk['message']['content'], end='', flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad264830",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
